package org.zenika.zba.zbadata;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ZbaDataApplication {

	public static void main(String[] args) {
		SpringApplication.run(ZbaDataApplication.class, args);
	}

}
