package org.zenika.zba.zbadata.model.ingredient;

public class Hopper {
}
