@startuml

title __ZBA-DATA's Class Diagram__\n

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Bottling {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Brewing {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Colding {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Crushing {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Density {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Fermenting {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Filtering {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.ingredient {
        class Hopper {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Hopping {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.ingredient {
        class Leaven {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Leavening {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.ingredient {
        class Malt {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.exception {
      class NullBodyException {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      class Recipe {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.controller {
      class RecipeController {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.dao {
      interface RecipeDao {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.exception {
      class RecipeNotFindException {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      package org.zenika.zba.zbadata.model.step {
        class Sanitizing {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      abstract class Step {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.dao {
      interface StepDao {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.exception {
      class StepsNotFoundException {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.config {
      package org.zenika.zba.zbadata.configuration {
        class SwaggerConfig {
        }
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.exception {
      class UserNotFindException {
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    class ZbaDataApplication {
    }
  }
  

  Bottling -up-|> Step
  Brewing -up-|> Step
  Colding -up-|> Step
  Crushing -up-|> Step
  Density -up-|> Step
  Fermenting -up-|> Step
  Filtering -up-|> Step
  Hopping -up-|> Step
  Leavening -up-|> Step
  Recipe -up-|> Serializable
  RecipeController o-- RecipeDao : recipeDao
  RecipeController o-- StepDao : stepDao
  Sanitizing -up-|> Step
  Step -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
